<resources>
    <string name="app_name">YiTaoBao</string>

    <string name="AppKey">"hua1989#hua"</string>
    <string name="shop">市场</string>
    <string name="message">消息</string>
    <string name="list">通讯录</string>
    <string name="myself">我的</string>
    <string name="goods_details">商品详情</string>
    <string name="goods_detail_message">发消息</string>
    <string name="goods_money">%s￥</string>
    <string name="goods_detail_master">发布者:%s</string>
    <string name="goods_price_hint">价格(￥)</string>
    <string name="goods_name_hint">商品的名称</string>
    <string name="goods_describe">请输入商品的描述,200字以内……</string>
    <string name="name">名字</string>
    <string name="price">价格</string>
    <string name="ShopType">类型:</string>
    <string name="ShopMaster">发布者:</string>
    <string name="ShopName">名字：</string>
    <string name="ShopPrice">价格：</string>
    <string name="ShopDescription">描述：</string>
    <string name="ShopExit">确认</string>
    <string name="MySelf_Login">登录</string>
    <string name="Myself_Register">注册</string>
    <string name="Myself_information">用户信息</string>
    <string name="Myself_shop">我的商品</string>
    <string name="Myself_up">上传商品</string>
    <string name="Register">注册</string>
    <string name="Login">登录</string>
    <string name="Login_name">请输入用户名</string>
    <string name="Login_pwd">请输入密码</string>
    <string name="camera">相机</string>
    <string name="exit">取消</string>
    <string name="graph">相册</string>
    <string name="nickname">昵称：</string>
    <string name="UserName">用户名：</string>
    <string name="ExitLogin">退出登录</string>
    <string name="Rename">修改</string>
    <string name="Self_Infoemation">个人信息</string>
    <string name="ReName">提交</string>
    <string name="Myshop">我的商品</string>
    <string name="AllRemove">全部删除</string>
    <string name="Remove">删除</string>
    <string name="ALL">全部</string>
    <string name="True">确定</string>
    <string name="Upshop">上传商品</string>
    <string name="Picture">图片选择</string>
    <string name="Cover">封面</string>
</resources>
