<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout" />
    <TextView
        android:id="@+id/camera"
        android:background="@color/burlywood"
        android:textSize="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/graph"
        android:background="@color/burlywood"
        android:textSize="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:id="@+id/exit"
        android:background="@color/burlywood"
        android:textSize="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"/>
</LinearLayout>