<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/layout">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout" />
        <com.pkmmte.view.CircularImageView
            android:id="@+id/iv_my_login"
            android:layout_gravity="center"
            android:src="@drawable/selector_portrait"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:scaleType="centerInside"
            app:border="true"
            app:border_color="#16f5f5f5"
            app:selector="true"
            app:selector_color="#4d000000"
            app:selector_stroke_color="#16f5f5f5"
            app:selector_stroke_width="@dimen/dp_6"
            app:shadow="false"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_my_login"
                android:text="@string/MySelf_Login"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="@dimen/layout"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_my_register"
                android:text="@string/Myself_Register"
                android:layout_weight="1"
                android:gravity="left"
                android:layout_width="@dimen/layout"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout">
        <LinearLayout
            android:id="@+id/ll_information"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="@dimen/dp_20"
                android:id="@+id/tv_information"
                android:text="@string/Myself_information"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout"
                android:drawableRight="@drawable/selector_login"/>
            <TextView
                android:layout_marginTop="@dimen/dp_20"
                android:id="@+id/tv_MyShop"
                android:text="@string/Myself_shop"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:drawableRight="@drawable/selector_login"
                android:layout_height="@dimen/layout" />
            <TextView
                android:layout_marginTop="@dimen/dp_20"
                android:id="@+id/tv_up"
                android:text="@string/Myself_up"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/selector_login"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
