<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.main.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/ll_tv"
        android:layout_alignParentStart="true">
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:id="@+id/ll_tv"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sp_60"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/main_bottom"
        android:padding="@dimen/dp_5">
        <TextView
            android:id="@+id/tv_shop"
            android:layout_weight="1"
            android:layout_width="@dimen/layout"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_ic_shopping"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/shop"
            android:layout_margin="@dimen/dp_5"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_weight="1"
            android:layout_width="@dimen/layout"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_ic_chat"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/message"
            android:layout_margin="@dimen/dp_5"/>
        <TextView
            android:id="@+id/tv_people"
            android:layout_weight="1"
            android:layout_width="@dimen/layout"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_ic_people"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/list"
            android:layout_margin="@dimen/dp_5"/>
        <TextView
            android:id="@+id/tv_identity"
            android:layout_weight="1"
            android:layout_width="@dimen/layout"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_ic_identity"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/myself"
            android:layout_margin="@dimen/dp_5"/>
    </LinearLayout>
</RelativeLayout>
