<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/ll_pop"
    android:layout_height="match_parent">
    <include layout="@layout/title"/>
    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/layout">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout" />
        <com.pkmmte.view.CircularImageView
            android:id="@+id/iv_show"
            android:layout_gravity="center"
            android:src="@drawable/selector_portrait"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:scaleType="centerInside"
            app:border="true"
            app:border_color="#16f5f5f5"
            app:selector="true"
            app:selector_color="#4d000000"
            app:selector_stroke_color="#16f5f5f5"
            app:selector_stroke_width="@dimen/dp_6"
            app:shadow="false"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout">
        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/nickname"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="@dimen/layout"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_show_nick"
                android:text="@string/MySelf_Login"
                android:layout_weight="2"
                android:gravity="left"
                android:layout_width="@dimen/layout"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/UserName"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_width="@dimen/layout"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_show_name"
                android:text="@string/MySelf_Login"
                android:layout_weight="2"
                android:gravity="left"
                android:layout_width="@dimen/layout"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_height="@dimen/layout">
        <Button
            android:id="@+id/exit_login"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/dp_20"
            android:text="@string/ExitLogin"
            android:layout_width="@dimen/layout"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/rename"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="1"
            android:textSize="@dimen/dp_20"
            android:text="@string/Rename"
            android:layout_width="@dimen/layout"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
