<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/good_toolbar"
        android:background="@color/moccasin">
        <TextView
            android:background="@drawable/pp_title"
            android:id="@+id/good_tv_title"
            android:visibility="gone"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/Remove"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout"
        android:scrollbars="none">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="380dp">
               <android.support.v4.view.ViewPager
                   android:id="@+id/vp_goods"
                   android:layout_weight="1"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/dp_370">
               </android.support.v4.view.ViewPager>
               <me.relex.circleindicator.CircleIndicator
                   android:id="@+id/indicator"
                   android:layout_alignBottom="@+id/vp_goods"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/dp_60"
                   app:ci_drawable="@drawable/circle_indicator">
               </me.relex.circleindicator.CircleIndicator>
           </RelativeLayout>
           <LinearLayout
               android:layout_weight="0"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="@dimen/dp_90">
               <LinearLayout
                   android:layout_weight="1"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/layout">
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_weight="1"
                       android:layout_width="@dimen/layout"
                       android:layout_height="match_parent">
                       <TextView
                           android:layout_weight="1"
                           android:text="@string/ShopType"
                           android:textColor="@color/text_color_hint"
                           android:textSize="@dimen/sp_20"
                           android:layout_width="@dimen/layout"
                           android:gravity="center"
                           android:layout_height="match_parent" />
                       <TextView
                           android:layout_weight="1"
                           android:id="@+id/tv_detail_type"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                   </LinearLayout>
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_weight="1"
                       android:layout_width="@dimen/layout"
                       android:layout_height="match_parent">
                       <TextView
                           android:layout_weight="1"
                           android:gravity="center"
                           android:text="@string/ShopName"
                           android:textColor="@color/text_color_hint"
                           android:textSize="@dimen/sp_20"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                       <TextView
                           android:layout_weight="1"
                           android:id="@+id/tv_detail_name"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                   </LinearLayout>
               </LinearLayout>
               <LinearLayout
                   android:layout_weight="1"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/layout">
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_weight="1"
                       android:layout_width="@dimen/layout"
                       android:layout_height="match_parent">
                       <TextView
                           android:textColor="@color/text_color_hint"
                           android:textSize="@dimen/sp_20"
                           android:layout_weight="1"
                           android:gravity="center"
                           android:text="@string/ShopPrice"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                       <TextView
                           android:layout_weight="1"
                           android:id="@+id/tv_detail_price"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                   </LinearLayout>
                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_weight="1"
                       android:layout_width="@dimen/layout"
                       android:layout_height="match_parent">
                       <TextView
                           android:textColor="@color/text_color_hint"
                           android:textSize="@dimen/sp_20"
                           android:gravity="center"
                           android:layout_weight="1"
                           android:text="@string/ShopMaster"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                       <TextView
                           android:layout_weight="1"
                           android:id="@+id/tv_detail_master"
                           android:layout_width="@dimen/layout"
                           android:layout_height="match_parent" />
                   </LinearLayout>
               </LinearLayout>
           </LinearLayout>
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_marginLeft="@dimen/dp_20"
                   android:textColor="@color/text_color_hint"
                   android:textSize="@dimen/sp_20"
                   android:gravity="center"
                   android:text="@string/ShopDescription"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent" />
               <TextView
                   android:layout_weight="1"
                   android:id="@+id/tv_detail_description"
                   android:layout_width="@dimen/layout"
                   android:layout_height="match_parent" />
           </LinearLayout>
       </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/bt_goods"
        android:text="@string/ShopExit"
        android:layout_margin="@dimen/dp_6"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:background="@color/colorPrimary"/>
</LinearLayout>
